# campaign-manager

./: .env.example  .gitignore  API.md  DATABASE.md  DECISIONS.md  PRD.md  README.md  SPRINT.md  TASKS.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f8db4f4aa6b_add_use_tls_to_smtp_settings.py  90a3efbbd367_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: campaigns.py  customers.py  health.py  smtp.py  templates.py
backend/app/core/: config.py  supabase.py
backend/app/db/: __init__.py  enums.py  session.py
backend/app/db/models/: __init__.py  base.py  campaign.py  (+4 more)
backend/app/repositories/: __init__.py  base.py  campaign_message_repository.py  campaign_repository.py  customer_repository.py  smtp_settings_repository.py  template_repository.py
backend/app/schemas/: __init__.py  api.py  campaign.py  campaign_message.py  customer.py  customer_import.py  health.py  smtp_settings.py  template.py
backend/app/services/: __init__.py  campaign_service.py  customer_import_service.py  customer_service.py  health.py  smtp_service.py  template_service.py
backend/tests/: test_app.py  test_campaign_service.py  test_campaigns_api.py  test_customer_import_service.py  test_customer_service_delete.py  test_customer_service_import.py  test_customers_api.py  test_database_schema.py  test_migration_sql.py  test_smtp_api.py  test_smtp_service.py  test_template_service.py  test_templates_api.py
(+90 files in other folders)
